Address Java compilation warnings
Warnings produced during compilation of both source code and tests
are addressed. Those warnings pertain to:
- Redundant casts
- Deprecated APIs that are substituted with the updated alternatives
- Incorrect visibility of classes and methods
- Use of internal proprietary APIs

Signed-off-by: Kostas Tsiounis <kostas.tsiounis@ibm.com>